# librat

./: .Makefile.swp  .README.md.swp  .gitignore  1  1q  AUTHORS  Appendix1.ipynb  Chapter1.ipynb  MANIFEST.in  Makefile  Makefile.am  Makefile.in  NEWS  README.md  SETUP.md  \  aclocal.m4  changelog.txt  chapter1.ipynb  chapter2.ipynb  config.h  config.in  config.status  configure  configure.ac  cshin  cshout  environment.yml  librat.1  libtool  make  makefile  missing  pullYou  ratindex.html  ratindex.md  readme  requirements.txt  setup.py  testMe.this.op
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: ratlib.info  ratlib.texi
docs/: birch.mov  default.profraw  environment.yml  local.mk  requirements.txt  setup.py
docs/source/: 1  (+11 more)
lib/: BPMS  x86_64
librat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
man/: librat.1
old/: Chapter1.ipynb
src/: .Makefile.in.swp  .files.c.swp  .fratP.c.swp  .makefile.swp  .prat_wavefront_read.c.swp  .start_code.c.swp  2D_vectors.c  2D_vectors.h  2D_vectors_double.c  2D_vectors_double.h  3D_vectors_double.c  3D_vectors_double.h  4D_vectors.c  4D_vectors.h  Complex.h  Makefile.am  Makefile.in  RATstart  RATstart.c  afrc_groups.h  ahmadd.c  ahmadd.h  allocate.c  allocate.h  bags.h  bbox.c  bbox.h  begue.c  begue.h  bilinear.c  bilinear.h  block.h  brdf.c  bs.c  camera.c  camera.h  canopy.c  clone.c  clone.h  configure.ac  (+130 more)
src/.deps/: 2D_vectors.Plo  2D_vectors_double.Plo  3D_vectors_double.Plo  4D_vectors.Plo  allocate.Plo  bbox.Plo  bilinear.Plo  camera.Plo  cylinder.Plo  cylinderTess.Plo  dem.Plo  disk.Plo  dummy.Plo  dumper.Plo  ellipse.Plo  envilib.Plo  error.Plo  facet.Plo  filelib.Plo  files.Plo  fratP.Plo  hiplib.Plo  imagelib.Plo  images.Plo  intersect_objects.Plo  libhipl.Plo  matherr.Plo  matrix.Plo  mtllib.Plo  plane.Plo  prat_wavefront_read.Plo  r250.Plo  randlcg.Plo  random.Plo  ratFront.Plo  reflectance.Plo  rpv.Plo  sensor_rsr.Plo  sky.Plo  sphere.Plo  (+6 more)
src/.libs/: librat.lai
src/autom4te.cache/: output.0  requests  traces.0
test/: .test_start.swp  test_start
(+48 files in other folders)
