bin_PROGRAMS = start
start_SOURCES = start.c
start_LDADD = librat.la
pkglib_LTLIBRARIES = librat.la
AM_CFLAGS = -I. -DDOUBLEDEF -I/usr/5include -Dx86_64 -I. -g -I. -DMMAP  -DVERBOSE -DDOUBLEDEF -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -DMATCHK -Dx86_64 -D_NO_NAG
librat_la_SOURCES  = rpv.c cylinderTess.c sphereTess.c ratFront.c disk.c dummy.c dem.c bbox.c facet.c camera.c intersect_objects.c random.c plane.c reflectance.c volumeRayTrace.c sphere.c cylinder.c ellipse.c spheroid.c sky.c sensor_rsr.c files.c mtllib.c bilinear.c dumper.c useful.c prat_wavefront_read.c images.c error.c filelib.c hiplib.c envilib.c imagelib.c libhipl.c r250.c randlcg.c 4D_vectors.c vectors2.c 2D_vectors.c 2D_vectors_double.c 3D_vectors_double.c  allocate.c matrix.c fratP.c matherr.c
